[project]
name = "pdf-password-remover"
version = "1.0.0"
description = "Remove passwords from PDF files in a directory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf[crypto]>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
pdf-password-remover = "pdf_password_remover:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
